# SimBa-SummerSchool

./: README  README.md  barcode-create.py  barcode-create2.py
SimBa-package/SimBa-bin/linux-32/: SimBa
SimBa-package/SimBa-bin/linux-64/: SimBa
SimBa-package/SimBa-bin/windows-32/: SimBa
SimBa-package/SimBa-bin/windows-64/: SimBa
SimBa-package/SimBa-example/: README  dt.txt
SimBa-package/SimBa-src/: CMakeLists.txt  INSTALL_README  Remark_for_ANN  SOFTWARE_README
SimBa-package/SimBa-src/src/: ANNSearchSampling.cpp  ANNSearchSampling.h  AnnotationMatrix.cpp  BCmain.cpp  CMakeLists-Ubuntu.txt  CMakeLists.txt  LongVector.h  PointSet.cpp  PointSet.h  README  Simpers.cpp  SimpleGraph.cpp  SimpleGraph.h  SimplexNode.h  SimplicialComplex.h  UnionFindDeletion.cpp
SimBa-package/SimBa-src/src/dll/: Readme.txt
SimBa-package/SimBa-src/src/lib/: ANN64  Readme.txt
processing-file/: barcode.pde
